--- a/main/static/css/login.css
+++ b/main/static/css/login.css
@@ -27,7 +27,7 @@ body{
   align-items: center;
   -webkit-justify-content: center;
   justify-content: center;
-  background-image:url('../images/assets/test.jpg');
+  background-image:url('../images/assets/bgtest2.jpg');
   background-repeat:no-repeat;
   background-size:cover;
   background-position:center;
@@ -44,7 +44,7 @@ body{
   justify-content: center;
   height: 100vh;
   width: 100%;
-  background-color: rgba(51,122,183, 0.3);
+  background-color: rgba(0,0,0, 0.5);
   height: 100vh;
 }
 
@@ -77,7 +77,8 @@ body{
 
 #logo-container {
   color: #FFFFFF;
-  font-size: 28px;
+  font-size: 48px;
+  font-family: Chicle;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column;
